Reorganisation du fichier quad + Avancé sur Rapport

--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -174,13 +174,7 @@ Maintenant s'il préfère commencer à vraiment utiliser \textit{PPMShop} et ain
 \end{center}
 
 Ici il pourra alors naviguer parmi tout les fichiers présent sur son ordinateur et ainsi choisir son image en format \textit{.ppm}. On peut également remarquer que dans la partie inférieur droite de cette fenêtre nous avons rajouté un filtre pour les fichiers qui permet d'afficher que les fichiers ayant une extension \textit{.ppm}.
-Après avoir choisis son fichier, nous affichons un écran de confirmation d'image ce qui nous permet aussi de faire des vérifications sur l'image choisie (dimensions carrées du fichier, d'extension \textit{.ppm} et de format \textit{\textbf{P3}}).
-
-\begin{center}
-\includegraphics[scale = 0.4]{confirmationScreen}\\
-\end{center}
-
-Une fois les vérifications passées et le choix du fichier confirmé le programme affichera son écran principal. Notre programme ayant plusieurs interface possible, il commence systématiquement par afficher la \textit{View 1}, qui correspond à l'interface par défaut.
+Après avoir choisis son fichier, nous faisons certaines vérifications sur l'image choisie (dimensions carrées du fichier, d'extension \textit{.ppm} et de format \textit{\textbf{P3}}). Une fois les vérifications passées, notre programme ayant plusieurs interface possible, il commence systématiquement par afficher la \textit{View 1}, qui correspond à l'interface par défaut.
 
 \begin{center}
 \includegraphics[scale = 0.4]{homeView1}\\
@@ -205,6 +199,12 @@ Si l'utilisateur préfère utiliser la \textit{View 2}, il lui suffit d'appuyer 
 \includegraphics[scale = 0.3]{view2}\\
 \end{center}
 Qui est une vue plus compacte, qui donne accès à toute les fonctionnalités sur un écran et la possibilité de voir le changement de l'image en temps réel. 
+\section{Bilans Personnel}
+\subsection{David RIGAUX}
+Pour ma part je me suis essentiellement occupé de l'interface graphique et j'ai trouvé ça super intéressant à faire. En effet, j'ai déjà essayé de faire une interface graphique il y a quelques années pour un autre projet d'informatique mais je n'y comprenais pas vraiment avec tout ce qui était objets, widgets et conteneurs, mais cette fois ci j'ai réussi à comprendre le principe et à apprendre comment ces notions marchaient. Même si j'ai eu quand même beaucoup de mal à arriver au résultat final (avec des problèmes incompréhensible, le fait que l'ordinateur calcul toute les positions des objets). Cependant, je suis content de ce que j'ai réussis à créer.  
+\subsection{Amine TAGRHOUT}
+\subsection{Mehdi DALAA}
 \section*{Conclusion}
+Le projet de manipulation d'images semblait facile à faire mais quand on y intègre un arbre cela rajoute un certain nombre de difficultés. De plus intégrer toute les fonctions demandés dans l'interface graphique était une certaine épreuve mais nous avons réussis à faire ce qui était demandé. Nous avons tous appris un peu plus que ce soit sur les structures d'abres, les fonctionnalités d'OCaml et surtout l'utilisation de ce langage. 
 \addcontentsline{toc}{section}{\protect\numberline{}Conclusion}
 \end{document}
